export interface Masterpiece {
  create(): string;
}
