@startuml

skinparam class {
  backgroundColor whitesmoke
  arrowColor dimgrey
  borderColor dimgrey
}

interface Masterpiece {
  create(): string
}

abstract class Studio {
  + {abstract} factoryMethod(): Masterpiece
  + createMasterpiece(): string
}

class Painter {
  + create(): string
}

class Sculptor {
  + create(): string
}

class PainterStudio <XOR> {
  + factoryMethod(): Masterpiece
}

class SculptorStudio <XOR> {
  + factoryMethod(): Masterpiece
}

Masterpiece <|.. Painter
Masterpiece <|.. Sculptor

Studio <|-- PainterStudio
Studio <|-- SculptorStudio

Masterpiece <. Studio

'Painter .. PainterStudio
'Sculptor .. SculptorStudio

@enduml

' Abstract class may also provide default implementation of factory method
' Client code is not aware of creator class (Studio)
